--- a/our-mission.html
+++ b/our-mission.html
@@ -291,7 +291,7 @@
             <div data-silex-type="text-element" class="editable-style text-element silex-id-1439554961635-5">
                 <div class="silex-element-content normal">
                     <h1 class="heading1">Our Mission</h1>
-                    <p class="normal">Salami do in est, chuck reprehenderit irure porchetta cillum. Nisi short loin ball tip rump shoulder, ribeye turducken tri-tip pancetta salami nulla porchetta ground round laboris id. Hamburger exercitation frankfurter, eiusmod nostrud
+                    <p class="normal">Salami do in est, chuck blablabla irure porchetta cillum. Nisi short loin ball tip rump shoulder, ribeye turducken tri-tip pancetta salami nulla porchetta ground round laboris id. Hamburger exercitation frankfurter, eiusmod nostrud
                         cow ham drumstick strip steak minim picanha quis. Beef ex turkey eu nostrud meatball laboris.
                     </p>
                 </div>
