--- a/editable.html
+++ b/editable.html
@@ -199,7 +199,7 @@ $(function() {
             </div>
             <div data-silex-type="text-element" class="editable-style text-element silex-id-1439554967286-60 nav-mark nav hide-on-mobile" data-silex-id="silex-id-1439554967286-60" style="">
                 <div class="silex-element-content normal">
-                    <p><a href="#!page-our-mission" class="" onclick="ga('send', 'event', 'wCAT', 'wACTION', 'wLABEL', 'wVALUE');">Our mission BLA</a><br></p></div>
+                    <p><a class="" onclick="ga('send', 'event', 'wCAT', 'wACTION', 'wLABEL', 'wVALUE');">Our mission BLA</a><br></p></div>
             </div>
             <div data-silex-type="text-element" class="editable-style text-element silex-id-1439554966975-57 nav-mark nav hide-on-mobile" data-silex-id="silex-id-1439554966975-57" style="">
                 <div class="silex-element-content normal"><p><a href="#!page-news-press">News &amp; Press</a></p>
