--- a/contact.html
+++ b/contact.html
@@ -180,7 +180,7 @@
             </div>
             <div data-silex-type="text-element" class="editable-style text-element silex-id-1439554967286-60 nav-mark nav hide-on-mobile" style="">
                 <div class="silex-element-content normal">
-                    <p><a href="our-mission.html" class="" onclick="ga('send', 'event', 'wCAT', 'wACTION', 'wLABEL', 'wVALUE');">Our mission BLA</a><br></p></div>
+                    <p><a class="" onclick="ga('send', 'event', 'wCAT', 'wACTION', 'wLABEL', 'wVALUE');">Our mission BLA</a><br></p></div>
             </div>
             <div data-silex-type="text-element" class="editable-style text-element silex-id-1439554966975-57 nav-mark nav hide-on-mobile" style="">
                 <div class="silex-element-content normal"><p><a href="news-press.html">News &amp; Press</a></p>
